Resolves: tdf#91673 wrong bit mask for BrowserMode

Change-Id: Iecd1d9d743fb3d7a02b31d2bee001de5092be7e0